--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "bootstrap": "^5.2.3",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router": "^6.9.0",
     "react-router-dom": "^6.9.0",
     "semantic-ui-css": "^2.5.0",
@@ -39,7 +44,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^2.0.1",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7",
     "vite": "^3.0.7"
   },
-  "proxy":"https://www.googleapis.com/youtube/v3"
+  "proxy": "https://www.googleapis.com/youtube/v3"
 }
