--- a/app-backend/package.json
+++ b/app-backend/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemon": "latest",
     "querystring": "^0.2.1"
   },
   "devDependencies": {
